--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,30 +4,41 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:minHeight="@dimen/list_item_height"
+    android:background="@color/tan_background">
+
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="@dimen/list_item_height"
+        android:layout_height="@dimen/list_item_height"/>
 
     <LinearLayout
         android:id="@+id/text_container"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingLeft="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/miwok_text_view"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:gravity="bottom"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:textAppearance="?android:textAppearanceMedium"
             tools:text="lutti"/>
 
         <TextView
             android:id="@+id/default_text_view"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:gravity="top"
+            android:textColor="#FFFFFF"
+            android:textAppearance="?android:textAppearanceMedium"
             tools:text="one"/>
 
 
